update new shortlink

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 			<li><strong>Dynamic Navigation listing</strong>: it will show collections from a lot of navigation. You can set each collection have each link.</li>
 		</ol>
 		<div class='img-wrapper' data-image-path='images/content/coll_4.jpg'><img src='images/content/coll_4.jpg' alt='#' /></div>
-		<p>Explain for <strong>Dynamic Navigation listing</strong> (method #3): must set up navigation (link list) for each collection with syntax: <span style="color:red"><b>Collection_handle:link_list</b></span></p>		
+		<p id="dynamic-navigation">Explain for <strong>Dynamic Navigation listing</strong> (method #3): must set up navigation (link list) for each collection with syntax: <span style="color:red"><b>Collection_handle:link_list</b></span></p>		
 		<p>Example: you want set collections listing for Fruit collection (handle is fruit-category), you must create the navigation (link list) with links of Fruit first (handle is fruit-1), then input the syntax is <span style="color:red"><b>fruit-category:fruit-1</b></span><br/>
 		the array follow separated by <span style="color:red"><b>|</b></span></br>
 		<div class='img-wrapper' data-image-path='images/content/coll_5.jpg'><img src='images/content/coll_5.jpg' alt='#' /></div>
